# bliss

./: .gitignore  .travis.yml  ANALYSIS.md  CMakeLists.txt  README.md  ROADMAP.md  example.py  test.py
.github/workflows/: c.yml  rust.yml
audio/: song.flac  song_s32.flac  song_s32_mono.flac
bliss-rs/: Cargo.toml  README.md
bliss-rs/benches/: analyze.rs  bench  chroma.rs  song.rs  timbral.rs  utils.rs
bliss-rs/data/: chroma-stft-normalized-expected.npy  chroma.npy  spectrum-chroma-mags.npy  spectrum-chroma-pitches.npy
bliss-rs/examples/: analyse.rs  analyze.rs  decode.rs  distance.rs  mpd.rs
bliss-rs/src/: analyze.rs  chroma.rs  decode.rs  lib.rs  library.rs  main.rs  misc.rs  song.rs  spectral.rs  tempo.rs  temporal.rs  timbral.rs  utils.rs
bliss-rust/: Cargo.toml
bliss-rust/src/: lib.rs
examples/: analyze.c  detect-gapless.c  distance.c  example.c  ml_analyze.c
include/: bandpass_coeffs.h  bliss.h
python/: README.md  bliss.py  build.py  build_bliss.py  setup.py
python/bliss/: __init__.py  bl_song.py  build_bliss.py  distance.py  version.py
python/bliss/tests/: test_bl_song.py
python/buildtools/: pkgconfig.py
python/examples/: analyze_gui.csv  analyze_gui.py  bl_song.py  distance.py  make_m3u_playlist.py
python/test/: test_bl_song.py  test_distance.py
src/: amp_sort.c  amplitude_sort.c  analyze.c  bandpass_coeffs.h  bliss.h  decode.c  decode_av.c  envelope.c  envelope_sort.c  freq_sort.c  frequency_sort.c  helpers.c  tempo_atk_sort.c
tests/: test_analyze.c  test_decode.c
