[package]
name = "bliss-rs"
version = "0.1.0"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-ffmpeg = ["ffmpeg-next/build"]

[dependencies]
# TODO set proper deps
ripemd160 = "0.9.0"
ndarray-npy = "0.7.0"
ndarray = { version = "0.14.0", features = ["rayon"] }
ndarray-stats = { git = "https://github.com/rust-ndarray/ndarray-stats" }
rustfft = "5.0.0-experimental"
num-complex = "0.3.0"
rayon = "*"
crossbeam = "*"
noisy_float = "0.1.13"
ffmpeg-next = "*"

[dependencies.aubio-rs]
git = "https://github.com/katyo/aubio-rs"

[dependencies.aubio-lib]
git = "https://github.com/Polochon-street/aubio-rs"
optional = true
branch = "fix-python-version"
features = ["with-fftw3"]
