[package]
name = "bliss-rs"
version = "0.1.0"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-ffmpeg = ["ffmpeg-next/build"]
bench = []

[dependencies]
# TODO set proper deps
ripemd160 = "0.9.0"
ndarray-npy = "0.7.0"
ndarray = { version = "0.14.0", features = ["rayon"] }
num_cpus = "1.13.0"
ndarray-stats = { git = "https://github.com/rust-ndarray/ndarray-stats" }
rustfft = "5.0.1"
lazy_static = "1.4.0"
rayon = "*"
crossbeam = "*"
noisy_float = "0.1.13"
ffmpeg-next = "*"
log = "*"
env_logger = "*"
thiserror = "*"

[dev-dependencies]
mpd = "*"
rusqlite = { git = "https://github.com/rusqlite/rusqlite" }
dirs = "3.0.1"
tempdir = "0.3.7"
clap = "2.33.3"
anyhow = "1.0.40"

[dependencies.aubio-rs]
git = "https://github.com/katyo/aubio-rs"

[dependencies.aubio-lib]
git = "https://github.com/Polochon-street/aubio-rs"
optional = true
branch = "fix-python-version"
features = ["with-fftw3"]
